; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_pipe.c_kull_m_pipe_write.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_pipe.c_kull_m_pipe_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i32] [i32 70, i32 108, i32 117, i32 115, i32 104, i32 70, i32 105, i32 108, i32 101, i32 66, i32 117, i32 102, i32 102, i32 101, i32 114, i32 115, i32 0], align 4
@.str.1 = private unnamed_addr constant [10 x i32] [i32 87, i32 114, i32 105, i32 116, i32 101, i32 70, i32 105, i32 108, i32 101, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kull_m_pipe_write(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i64, i64* %6, align 8
  %13 = call i64 @WriteFile(i32 %10, i32 %11, i64 %12, i64* %8, i32* null)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %26

15:                                               ; preds = %3
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* %8, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %26

19:                                               ; preds = %15
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @FlushFileBuffers(i32 %20)
  store i32 %21, i32* %7, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %25, label %23

23:                                               ; preds = %19
  %24 = call i32 @PRINT_ERROR_AUTO(i8* bitcast ([17 x i32]* @.str to i8*))
  br label %25

25:                                               ; preds = %23, %19
  br label %28

26:                                               ; preds = %15, %3
  %27 = call i32 @PRINT_ERROR_AUTO(i8* bitcast ([10 x i32]* @.str.1 to i8*))
  br label %28

28:                                               ; preds = %26, %25
  %29 = load i32, i32* %7, align 4
  ret i32 %29
}

declare dso_local i64 @WriteFile(i32, i32, i64, i64*, i32*) #1

declare dso_local i32 @FlushFileBuffers(i32) #1

declare dso_local i32 @PRINT_ERROR_AUTO(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
